--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./src/css/styles.css" type="text/css"/>
+    <link rel="stylesheet" href="./css/styles.css" type="text/css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Document</title>
 </head>
@@ -12,7 +12,7 @@
     <div class="header">
         <div class="header__wrapper">
             <div class="header__logo">
-                <img src="./src/media/img/logo_956.png" alt="not image"> 
+                <img src="./media/img/logo_956.png" alt="not image"> 
             </div>
             <div class="header__navbar">
                 <a href="#">Home</a>
