--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css" type="text/css"/>
+   
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <title>Document</title>
 </head>
@@ -25,8 +24,8 @@
         <h1>UI/UX & Graphic Designer</h1>
         <h3>I am a Graphic & Web Designer based in New York, specializing <br> in User Interface Design and Development.</h3>
     </div>
-    <div class="work__wrapper">
-        <div class="work__content">
+    <div class="content">
+        <div class="items__wrapper">
             <div class="item"></div>
             <div class="item"></div>
             <div class="item"></div>
@@ -42,11 +41,39 @@
         </div>
     </div>
    <div class="footer">
-        <div class="content1__wrapper">
-            <h2>Piroll Design, Inc.</h2>
-            <span>© 2017 Piroll. All rights reserved. <br> Designed by robirurk.</span>
-        </div>
-        <span class="contacts">hello@pirolltheme.com <br> +44 987 065 908</span>
+        <div class="info">
+            <div class="company-info">
+                <span class="name-company">
+                    Piroll Design, Inc.
+                </span>
+                <span class="company-warning">
+                    © 2017 Piroll. All rights reserved. <br> Designed by robirurk.
+                </span>
+                <span class="company-contact">
+                    hello@pirolltheme.com <br> +44 987 065 908
+                </span>
+            </div>     
+            <div class="links-info">
+                <ul>
+                    <li>Projects</li>   
+                    <li>About</li>
+                    <li>Services</li>
+                    <li>Carreer</li>
+                </ul>
+                <ul>
+                    <li>News </li>  
+                    <li>Events</li>
+                    <li>Contact</li>
+                    <li>Legals</li>
+                </ul>
+                <ul>
+                    <li>Facebook</li>   
+                    <li>Twitter</li>
+                    <li>Instagram</li>
+                    <li>Dribbble</li>
+                </ul>
+            </div> 
+        </div>    
    </div>
 </body>
 </html>
